--- a/html-css.html
+++ b/html-css.html
@@ -35,7 +35,7 @@
         <p id="my-paragraph">Step 1: HTML</p>
         <p class="paragraph2">Give your <code>"p"</code> element the class <code>"paragraph2"</code></p>
       <div class="center-image">
-        <!--<img src="\\wsl.localhost\Ubuntu\home\chris\devacademy\chris-temoni.github.io\img\id.png" alt="my own image">--> <img src="https://github.com/chris-temoni/chris-temoni.github.io/blob/main/img/class.png" alt="my own image">
+        <img src="\\wsl.localhost\Ubuntu\home\chris\devacademy\chris-temoni.github.io\img\id.png" alt="my own image" class="image-class">
       </div> 
 
         <p id="my-paragraph">Step 2: CSS</p>
