--- a/domLesson.html
+++ b/domLesson.html
@@ -9,7 +9,8 @@
         <h1>My test page</h1>
       </header>
       <main>
-        <p>
+        <button id="test-button">Click Me!</button>
+        <!-- <p>
           That said, if you just can't help yourself, there's a
           <a id="w3schools-tutorial" href="http://www.w3schools.com/js/js_htmldom.asp">
             W3Schools HTML DOM tutorial
@@ -23,7 +24,7 @@
           <span class="dom">HTML DOM</span>
           that you're
           <a href="http://bit.ly/1MEVufu">looking for</a>.
-        </p>
+        </p> -->
       </main>
   </body>
 </html>
