--- a/domLesson.html
+++ b/domLesson.html
@@ -6,10 +6,14 @@
   <body>
     <div id="app">
       <header>
-        <h1>My test page</h1>
+        <h1>My keystroke test page</h1>
       </header>
       <main>
-        <button id="test-button">Click Me!</button>
+        <p>
+          <input id="keystroker">
+        </p>
+        <p id="outputter"></p>
+        <!-- <button id="test-button">Click Me!</button> -->
         <!-- <p>
           That said, if you just can't help yourself, there's a
           <a id="w3schools-tutorial" href="http://www.w3schools.com/js/js_htmldom.asp">
