social link updated

--- a/javascript-dom.html
+++ b/javascript-dom.html
@@ -165,7 +165,8 @@
     <footer>
       <div class="footer-section">
         
- 
+        <p class="paragraph2">my social media links</p>
+
         <div class="icons">
         <a href="https://www.youtube.com/@brosukig1967/videos"><i class="fa-brands fa-youtube"></i></a>
         <a href="https://www.tiktok.com/@brosuki1"><i class="fa-brands fa-tiktok"></i></a>
