--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
+
+    <div id="preloader"></div>
+
     <header>
       <h1>My Blog</h1>
       <nav class="right-align">
@@ -32,7 +35,7 @@
         
         <ul id="unlisted">
           <li><a href="https://chris-temoni.github.io/blog/te-houtaewa-template.html" >Te Houtaewa</a></li>
-          <li><a href="html-css.html">Id vs Classes</a></li><!--create link size font-->
+          <li><a href="html-css.html">Id vs Classes</a></li>
           <li><a href="https://chris-temoni.github.io/blog/identity-values.html">Identy-values</a></li>
           <li><a href="https://chris-temoni.github.io/blog/learning-plan.html">Learning-plan</a></li>
           <li><a href="https://chris-temoni.github.io/javascript-dom.html">JS Fundamentals</a></li>
@@ -58,5 +61,14 @@
       </div>
       </div>
     </footer>
+
+    <script>
+      let loader = document.getElementById("preloader")
+  
+      window.addEventListener("load", function(){
+        loader.style.display = "none"
+      })
+    </script>
+
   </body>
 </html>
