--- a/emotional-intelligence.html
+++ b/emotional-intelligence.html
@@ -15,6 +15,7 @@
   <body>
     <header>
       <h1>My Blog</h1>
+      <img src="..\img\avatar.png" alt="myAvatar" class="logo">
 
       <nav class="right-align">
         <ul>
