--- a/html-css.html
+++ b/html-css.html
@@ -13,6 +13,7 @@
   <body>
     <header>
       <h1>My Blog</h1>
+      <img src="..\img\avatar.png" alt="myAvatar" class="logo">
 
       <nav class="right-align">
 
