--- a/javascript-dom.html
+++ b/javascript-dom.html
@@ -14,6 +14,7 @@
 
     <header>
       <h1>My Blog</h1>
+      <img src="..\img\avatar.png" alt="myAvatar" class="logo">
 
       <nav class="right-align">
 
