--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header -->
     <header>
       <h1>My Blog</h1>
-      <img src="..\img\avatar.png" alt="myAvatar" class="logo">
+      <img src="\\wsl.localhost\Ubuntu\home\chris\devacademy\chris-temoni.github.io\img\avatar.png" alt="myAvatar" class="logo">
       <nav class="right-align">
         
         <!-- Navbar -->
