--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!-- Blog Links -->
         <ul id="unlisted">
           <li><a href="https://chris-temoni.github.io/blog/te-houtaewa-template.html" data-date="23-06-2023" >Te Houtaewa</a></li>
-          <li><a href="html-css.html" data-date="23-06-2023">Id vs Classes</a></li>
+          <li><a href="https://chris-temoni.github.io/html-css.html" data-date="23-06-2023">Id vs Classes</a></li>
           <li><a href="https://chris-temoni.github.io/blog/identity-values.html" data-date="24-06-2023">Identy-values</a></li>
           <li><a href="https://chris-temoni.github.io/blog/learning-plan.html" data-date="25-06-2023">Learning-plan</a></li>
           <li><a href="https://chris-temoni.github.io/javascript-dom.html" data-date="1-07-2023">JS Fundamentals</a></li>
