--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header -->
     <header>
       <h1>My Blog</h1>
-      <img src="\\wsl.localhost\Ubuntu\home\chris\devacademy\chris-temoni.github.io\img\avatar.png" alt="myAvatar" class="logo">
+      <img src="..img\avatar.png" alt="myAvatar" class="logo">
       <nav class="right-align">
         
         <!-- Navbar -->
@@ -37,7 +37,7 @@
         <!-- Blog Links -->
         <ul id="unlisted">
           <li><a href="https://chris-temoni.github.io/blog/te-houtaewa-template.html" data-date="23-06-2023" >Te Houtaewa</a></li>
-          <li><a href="https://chris-temoni.github.io/html-css.html" data-date="23-06-2023">Id vs Classes</a></li>
+          <li><a href="https://chris-temoni.github.io/blog/html-css.html" data-date="23-06-2023">Id vs Classes</a></li>
           <li><a href="https://chris-temoni.github.io/blog/identity-values.html" data-date="24-06-2023">Identy-values</a></li>
           <li><a href="https://chris-temoni.github.io/blog/learning-plan.html" data-date="25-06-2023">Learning-plan</a></li>
           <li><a href="https://chris-temoni.github.io/javascript-dom.html" data-date="1-07-2023">JS Fundamentals</a></li>
