--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
     <header>
       <h1>My Blog</h1>
-      <img src="..\img\avatar.png" alt="myAvatar" class="logo">
+      <!--<img src="..\img\avatar.png" alt="myAvatar" class="logo">-->
       <nav class="right-align">
         <ul>
           <li><a href="index.html">Home</a></li>
