--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
   </head>
   <body>
     <!-- Header -->
-    <header>
+    <header role="banner">
       <h1>My Blog</h1>
       <!--<img src="..img\avatar.png" alt="myAvatar" class="logo">-->
       <nav class="right-align" role="navigation">
         
         <!-- Navbar -->
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="index.html" aria-label="Go to Home Page">Home</a></li>
+          <li><a href="about.html" aria-label="Go to about Page">About</a></li>
+          <li><a href="contact.html" aria-label="Go to Contact Page">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -56,9 +56,9 @@
 
         <div class="icons">
         <a href="https://www.youtube.com/@brosukig1967/videos" aria-label="This is a link to Youtube"><i class="fa-brands fa-youtube"></i></a>
-        <a href="https://www.tiktok.com/@brosuki1"><i class="fa-brands fa-tiktok"></i></a>
-        <a href="https://www.twitch.tv/namethatguy"><i class="fa-brands fa-twitch"></i></a>
-        <a href="https://www.facebook.com/brosuki1/"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://www.tiktok.com/@brosuki1" aria-label="This is a link to tiktok"><i class="fa-brands fa-tiktok"></i></a>
+        <a href="https://www.twitch.tv/namethatguy" aria-label="This is a link to twitch"><i class="fa-brands fa-twitch"></i></a>
+        <a href="https://www.facebook.com/brosuki1/" aria-label="This is a link to facebook"><i class="fa-brands fa-facebook"></i></a>
         </div>
       <div class="bottom-footer">
         <p>Copyright &copy;2023 Designed by <span class="design">Chris
