--- a/emotional-intelligence.html
+++ b/emotional-intelligence.html
@@ -68,11 +68,11 @@
     <footer>
       <div class="footer-section">
         <div class="icons">
-        <a href="https://www.youtube.com/@brosukig1967/videos"><i class="fa-brands fa-youtube"></i></a>
-        <a href="https://www.tiktok.com/@brosuki1"><i class="fa-brands fa-tiktok"></i></a>
-        <a href="https://www.twitch.tv/namethatguy"><i class="fa-brands fa-twitch"></i></a>
-        <a href="https://www.facebook.com/brosuki1/"><i class="fa-brands fa-facebook"></i></a>
-        </div>
+          <a href="https://www.youtube.com/@brosukig1967/videos" aria-label="This is a link to Youtube"><i class="fa-brands fa-youtube"></i></a>
+          <a href="https://www.tiktok.com/@brosuki1" aria-label="This is a link to tiktok"><i class="fa-brands fa-tiktok"></i></a>
+          <a href="https://www.twitch.tv/namethatguy" aria-label="This is a link to twitch"><i class="fa-brands fa-twitch"></i></a>
+          <a href="https://www.facebook.com/brosuki1/" aria-label="This is a link to facebook"><i class="fa-brands fa-facebook"></i></a>
+          </div>
       <div class="bottom-footer">
         <p>Copyright &copy;2023 Designed by <span class="design">Chris
       </div>
