--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <li><a href="https://chris-temoni.github.io/javascript-dom.html" data-date="1-07-2023">JS Fundamentals</a></li>
           <li><a href="https://chris-temoni.github.io/blog/neuroplasticity.html" data-date="5-07-2023">Neuroplasticity</a></li>
           <li><a href="https://chris-temoni.github.io/blog/te-whare-tapa-wha.html" data-date="5-07-2023">Te Whare Tapa Whā</a></li>
-          <li><a href="https://chris-temoni.github.io/blog/proble-solving.html" data-date="8-07-2023">Te Whare Tapa Whā</a></li>
+          <li><a href="https://chris-temoni.github.io/blog/problem-solving.html" data-date="8-07-2023">Problem Solving</a></li>
 
         </ul>
         
