--- a/domLesson.html
+++ b/domLesson.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" type="image/png" href="img/shark.png" />
     <title>Test</title>
   </head>
   <body>
