--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <li><a href="https://chris-temoni.github.io/blog/identity-values.html" data-date="24-06-2023">Identy-values</a></li>
           <li><a href="https://chris-temoni.github.io/blog/learning-plan.html" data-date="25-06-2023">Learning-plan</a></li>
           <li><a href="https://chris-temoni.github.io/blog/emotional-intelligence.html" data-date="28-06-2023">Emotional-Intelligence</a></li>
-          <li><a href="https://chris-temoni.github.io/javascript-dom.html" data-date="1-07-2023">JS Fundamentals</a></li>
+          <li><a href="https://chris-temoni.github.io/blog/javascript-dom.html" data-date="1-07-2023">JS Fundamentals</a></li>
           <li><a href="https://chris-temoni.github.io/blog/neuroplasticity.html" data-date="5-07-2023">Neuroplasticity</a></li>
           <li><a href="https://chris-temoni.github.io/blog/te-whare-tapa-wha.html" data-date="5-07-2023">Te Whare Tapa Whā</a></li>
           <li><a href="https://chris-temoni.github.io/blog/problem-solving.html" data-date="8-07-2023">Problem Solving</a></li>
