--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
           <li><a href="https://chris-temoni.github.io/blog/neuroplasticity.html" data-date="5-07-2023">Neuroplasticity</a></li>
           <li><a href="https://chris-temoni.github.io/blog/te-whare-tapa-wha.html" data-date="5-07-2023">Te Whare Tapa Whā</a></li>
           <li><a href="https://chris-temoni.github.io/blog/problem-solving.html" data-date="8-07-2023">Problem Solving</a></li>
+          <li><a href="https://chris-temoni.github.io/blog/foundations-reflections.html" data-date="13-07-2023">Problem Solving</a></li>
+
 
         </ul>
         
